--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.css">
   <title>Кекстаграм</title>
 </head>
 
@@ -229,6 +230,7 @@
   <template id="messages">
     <div class="img-upload__message  img-upload__message--loading">Загружаем...</div>
   </template>
+<script src="https://unpkg.com/nouislider@14.6.3/distribute/nouislider.min.js"></script>
 <script  src="/js/main.js" type="module"></script>
 </body>
 </html>
